//
// Created by  Oleksiy Grechnyev on 3/9/2017.
//
#pragma once

namespace navi {
    /// Interface: parent to all navigators
    class INavigator {
    public:
        /// virtual destructor
        virtual ~INavigator() = 0;
    };
}



