//
// Created by  Oleksiy Grechnyev on 3/9/2017.
//

#pragma once
namespace navi {
    /// TODO implement
    class OutputNavigationData {

    };
}



